--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,20 @@
+awscli==1.11.14
+botocore==1.4.71
+colorama==0.3.7
+docutils==0.12
 enum-compat==0.0.2
+jmespath==0.9.0
 netifaces==0.10.5
 oauthlib==2.0.0
 protobuf==3.0.0b2
+pyasn1==0.1.9
 PyChromecast==0.7.7
 python-dateutil==2.4.2
 pytodoist==2.0.5
 requests==2.11.1
 requests-oauthlib==0.7.0
+rsa==3.4.2
+s3transfer==0.1.9
 six==1.10.0
 slackclient==1.0.2
 -e git+git@github.com:Doist/todoist-python.git@2f8b7106bdb9f543b6bde0022e7045e3bdb2b2bb#egg=todoist_python
